docs/api/graphql/v1/operations/mutations/create-group.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: create-group
title: createGroup
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};




<Badge class="badge badge--secondary badge--primary" text="form schema"/>



Create a new group in your organization.

New groups are created with the `CUSTOM` role by default, allowing you to assign
project-level access grants after creation. Requires `organization_admin` permissions.




```graphql
createGroup(
  organizationId: ID!
  input: CreateGroupInput!
): GroupPayload
```





### Form Schema

This mutation supports dynamic form generation using JSON Schema.

- [JSON Schema](https://api.massdriver.cloud/graphql/v1/inputs/createGroup.json)
- [UI Schema](https://api.massdriver.cloud/graphql/v1/inputs/createGroup.ui.json)

<SchemaForm
  schemaUrl="https://api.massdriver.cloud/graphql/v1/inputs/createGroup.json"
  uiSchemaUrl="https://api.massdriver.cloud/graphql/v1/inputs/createGroup.ui.json"
  name="createGroup"
/>

### Arguments

#### [<code style={{ fontWeight: 'normal' }}>createGroup.<b>organizationId</b></code>](#organization-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#organization-id\} 
Your organization's unique identifier.


#### [<code style={{ fontWeight: 'normal' }}>createGroup.<b>input</b></code>](#input)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>CreateGroupInput!</b></code>](/api/graphql/v1/types/inputs/create-group-input.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="input"/> \{#input\} 
Create a new group. Groups control which projects members can access.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>GroupPayload</b></code>](/api/graphql/v1/types/objects/group-payload.mdx) <Badge class="badge badge--secondary " text="object"/>